# wavalign

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  format.sh
src/: bestoffset.cc  bestoffset.h  ssd.cc  ssd.h  xcorr.cc  xcorr.h
test/: wavalign.cc
test/wavfile/: pcm_conv.h  unittest_wavfmt.cc  unittest_wavfmt.inl  wavreader.c  wavreader.h  wavwriter.c  wavwriter.h
test/win32/: getopt.h
